# rust-ws-front

./: Cargo.toml  index.html
assets/: sw.js
src/: app.rs  lib.rs  main.rs  trace_app.rs
src/trace_app/: miti_ws.rs  trace_pannels.rs
src/trace_app/trace_pannels/: link_pannel.rs  rate_pannel.rs
