[package]
name = "miti_tracefront"
version = "0.1.0"
authors = ["come"]
edition = "2021"
rust-version = "1.72"


[dependencies]
ewebsock = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.26.2" # Gives us egui, epi and web+native backends
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.2"
tokio = { version = "1.16", optional = true, features = [
    "macros",
    "rt-multi-thread",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
